--- a/src/style/global.css
+++ b/src/style/global.css
@@ -36,3 +36,47 @@ a{
     padding: 10px;
     font-size: 1rem;
 }
+
+.btn-red:hover{
+    background-color: #ececec;
+}
+
+.btn-cart{
+    background-color: #fff;
+    border: 3px solid #e9e9e9;
+    border-radius: 50px;
+    width: 60%;
+    padding: 10px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.btn-cart:hover{
+    background-color: #d24434;
+}
+
+.container{
+    margin-left: 30px;
+    margin-right: 30px;
+    max-width: 90%;
+    margin: auto;
+}
+
+.titulo h1{
+    font-size: 2.5rem;
+}
+
+.subtitulo{
+    color: #747474;
+    font-size: 1.2ren;
+    max-width: 50%;
+    margin: auto;
+}
+
+
+
+@media screen and (max-width: 1100px) {
+    .subtitulo{
+        max-width: 95%;
+    }
+}
