--- a/src/Components/laboratorio-efg/laboratorio.css
+++ b/src/Components/laboratorio-efg/laboratorio.css
@@ -1,4 +1,5 @@
-.produto-box{
+.lab-box{
+    background-color: #acacac;
     border: 3px solid #e9e9e9;
     border-radius: 18px;
     max-width: 230px;
@@ -6,13 +7,13 @@
     display: inline-block;
     margin: 30px;
 }
-.prod-vitrine-descricao{
-    color: #acacac;
+.lab-responsavel-descricao{
+    color: black;
     font-size: 1rem;
 }
 
-.prod-vitrine-preco{
-    color: #e84f3d;
+.lab-horario{
+    color: 218257;
     font-size: 1.4rem;
     font-weight: bold;
     line-height: 1rem;
