--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -7,13 +7,14 @@
 }
 
 .logotipo{
+    float: left;
     max-width: 100px;
     width: 12%;
     padding: 10px 10px 10px 20px;
 }
 
 .menu{
-    float: right;
+    float: inline-start;
     padding: 10px;
 }
 
@@ -23,5 +24,5 @@
 }
 
 .menu a:hover{
-    color: #d24434;
+    color: #218257;
 }
